# auto_sorting_machine

./: .clang-format  CMakeLists.txt  README.md
data/train/: config.json
data/train/files/: 01.txt
includes/classes/: CharTypeArray.cpp  CharTypeArray.h  Classifier.cpp  Classifier.h  ClassifierTrainer.cpp  ClassifierTrainer.h  MarkovChainModel.cpp  MarkovChainModel.h  ModelHeader.cpp  ModelHeader.h  ModelHeader.inl  NavieBayesModel.cpp  NavieBayesModel.h  TfidfTrainer.cpp  TfidfTrainer.h  TfidfVectorizer.cpp  TfidfVectorizer.h  Tokenizer.cpp  Tokenizer.h  TokenizerTrainer.cpp  TokenizerTrainer.h  Trainer.cpp  Trainer.h
includes/details/MarkovChainModel/: BinaryModelHelper.cpp  BinaryModelHelper.h  ParseModelHelper.cpp  ParseModelHelper.h
includes/details/ModelHeader/: BinaryHeaderHelper.cpp  BinaryHeaderHelper.h  ParseHeaderHelper.cpp  ParseHeaderHelper.h
includes/details/Tokenizer/: ReadModelHelper.cpp  ReadModelHelper.h
includes/details/TokenizerTrainer/: EPTrainerHelper.cpp  EPTrainerHelper.h  ReadFilesHelper.cpp  ReadFilesHelper.h  SinglePreprocessorHelper.cpp  SinglePreprocessorHelper.h
includes/test/: TestDataSet.cpp  TestDataSet.h
src/: main.cpp  test.cpp
utils/Logger/: Logger.cpp  Logger.h  Logger.inl
utils/Vector/: Vector.cpp  Vector.h  Vector.inl
